# h3-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: solar_grid_mismatch.md  waste_container_analysis.md
scripts/: benchmark_compare_sets.py
skills/h3-mcp/: SKILL.md
skills/verticals/ev-infrastructure/: SKILL.md
skills/verticals/telecom-coverage/: SKILL.md
skills/verticals/waste-management/: SKILL.md
src/h3_mcp/: __init__.py  benchmarks.py  cache.py  geojson_utils.py  h3_ops.py  output_controls.py  runtime.py  server.py
src/h3_mcp/models/: schemas.py
src/h3_mcp/resources/: resolution.py
src/h3_mcp/tools/: analysis.py  cellsets.py  comparison.py  components.py  export.py  hierarchy.py  indexing.py  neighbors.py  stats.py
tests/: conftest.py  test_aggregate.py  test_benchmarks.py  test_cache.py  test_comparison.py  test_components.py  test_dev_server_blackbox.py  test_distance_matrix.py  test_export.py  test_geojson_utils.py  test_hierarchy.py  test_hotspots.py  test_indexing.py  test_integration_scenario1.py  test_integration_scenario2.py  test_neighbors.py  test_output_controls.py  test_resolution_resource.py  test_server_loading.py  test_stats.py  test_validation.py
tests/fixtures/: amsterdam_boundary.geojson  sample_points.geojson
